task: overflow fixes

--- a/src/shell/components/FieldTypeEditor/Editors/Markdown.less
+++ b/src/shell/components/FieldTypeEditor/Editors/Markdown.less
@@ -2,6 +2,7 @@
 @import "~@zesty-io/core/typography.less";
 
 .Markdown {
+  width: 100%;
   border: 4px solid #eaecf1;
   border-radius: 4px;
   flex: 1;
