--- a/src/shell/components/FieldTypeImage/FieldTypeImage.less
+++ b/src/shell/components/FieldTypeImage/FieldTypeImage.less
@@ -3,7 +3,7 @@
 
 .FieldTypeImage {
   background-color: @white;
-  border: solid 1px @btnDisabled;
+  // border: solid 1px @btnDisabled;
   margin: 0;
 
   // .FieldTypeImageHeader {
@@ -22,6 +22,7 @@
     display: flex;
     flex-wrap: wrap;
     // margin: 16px;
+    gap: 6px;
   }
   .FieldTypeImageFooter {
     flex-direction: row-reverse;
@@ -51,7 +52,7 @@
   background: @nav-background-color;
   border-radius: 3px 3px 3px 0;
   height: 200px;
-  margin-right: 6px;
+  // margin-right: 6px;
   margin-top: 6px;
   overflow: hidden;
   position: relative;
